--- a/src/main/webapp/template/user/css/style.css
+++ b/src/main/webapp/template/user/css/style.css
@@ -88,7 +88,27 @@ ul, ol {
 /*---------------------
   Helper CSS
 -----------------------*/
-
+.lookfor-room form{
+	display: flex;
+	justify-content: center;
+	margin-bottom: 50px;
+	flex-wrap: wrap;
+}
+#date-in{
+	position: relative;
+}
+.inputroom{
+	border: 4px solid #ebebeb;
+}
+.inputroom + .inputroom{
+	margin-left: 10px;
+}
+.lookfor-room i::before {
+    color: #dfa974;
+    position: absolute;
+    right: 18px;
+    bottom: 17px;
+}
 .section-title {
 	text-align: center;
 	margin-bottom: 22px;
