--- a/src/main/webapp/template/admin/css/styles.css
+++ b/src/main/webapp/template/admin/css/styles.css
@@ -11241,3 +11241,47 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+
+/*table css */
+/*#roomTable th {
+	border-collapse: collapse;
+	width: 100%;
+	color: #333;
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	text-align: left;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+#roomTable th {
+	background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity));
+	color: #fff;
+	font-weight: bold;
+	padding: 10px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #ccc;
+}
+
+#roomTable tr:nth-child(even) td {
+	background-color: #f2f2f2;
+}
+
+#roomTable tr:hover td {
+	background-color: #ffedcc;
+}
+
+#roomTable td {
+	background-color: #fff;
+	padding: 10px;
+	border-bottom: 1px solid #ccc;
+	font-weight: bold;
+}
+*/
