--- a/src/main/webapp/template/user/css/style.css
+++ b/src/main/webapp/template/user/css/style.css
@@ -287,7 +287,65 @@ ul, ol {
 /*---------------------
   Header
 -----------------------*/
-
+.info-account {
+	position: relative;
+	display: inline-block;
+	color: #dfa974;
+	padding: 8px;
+	border-radius: 5px;
+	transition: all 0.25s;
+}
+.info-account:hover {
+	cursor: pointer;
+	background-color: rgba(0 0 0 / 8%);
+}
+.info-account:hover .setting-account-list,
+.info-account:hover .block-connect {
+	display: block;
+}
+.setting-account-list {
+	list-style: none;
+    background-color: #dfa974;
+    box-shadow: 2px 7px 6px 1px rgb(36 11 12 / 20%);
+    width: 160px;
+    position: absolute;
+    right: 0px;
+    top: 50px;
+    text-align: left;
+    border-radius: 8px;
+	z-index: 100;
+	display: none;
+}
+.setting-account-list::before {
+	content: "";
+	position: absolute;
+	top: -20px;
+	right: 20px;
+	border-width: 10px 12px;
+	border-style: solid;
+	border-color: transparent transparent #dfa974 transparent;
+}
+.setting-account-list::after {
+	content: "";
+	position: absolute;
+	top: -19px;
+	right: 0;
+	width: 160px;
+	height: 20px;
+	background-color: transparent;
+}
+.setting-account-item {
+	padding: 12px 16px;
+	border-radius: 8px;
+}
+.setting-account-item a {
+	color: #fff;	
+}
+.setting-account-item:hover {
+	background-color: #9f9a9a4a;
+	color: #fff;
+	cursor: pointer;
+}
 .header-section.header-normal .menu-item {
 	-webkit-box-shadow: 0px 12px 15px rgba(36, 11, 12, 0.05);
 	box-shadow: 0px 12px 15px rgba(36, 11, 12, 0.05);
