--- a/src/main/webapp/template/user/css/style.css
+++ b/src/main/webapp/template/user/css/style.css
@@ -289,7 +289,9 @@ ul, ol {
 -----------------------*/
 .info-account {
 	position: relative;
-	display: inline-block;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 	color: #dfa974;
 	padding: 8px;
 	border-radius: 5px;
@@ -340,11 +342,21 @@ ul, ol {
 }
 .setting-account-item a {
 	color: #fff;	
+	display: block;
+	width: 100%;
 }
 .setting-account-item:hover {
 	background-color: #9f9a9a4a;
 	color: #fff;
 	cursor: pointer;
+}
+.icon-circle-user {
+    position: relative;
+    display: inline-block;
+    margin-right: 5px;
+}
+.icon-circle-user .fa.fa-user-circle {
+	font-size: 25px;
 }
 .header-section.header-normal .menu-item {
 	-webkit-box-shadow: 0px 12px 15px rgba(36, 11, 12, 0.05);
