--- a/src/main/webapp/template/user/css/style.css
+++ b/src/main/webapp/template/user/css/style.css
@@ -1918,6 +1918,21 @@ ol {
 .room-booking form button:hover {
 	background-color: lemonchiffon;
 }
+.room-booking button {
+	display: block;
+	font-size: 14px;
+	text-transform: uppercase;
+	border: 1px solid #dfa974;
+	border-radius: 2px;
+	color: #dfa974;
+	font-weight: 500;
+	background: transparent;
+	width: 100%;
+	height: 46px;
+	margin-top: 30px;
+}.room-booking button:hover {
+	background-color: lemonchiffon;
+}
 /*---------------------
   Blog Section
 -----------------------*/
