--- a/src/main/webapp/template/user/css/style.css
+++ b/src/main/webapp/template/user/css/style.css
@@ -1603,7 +1603,7 @@ ol {
 	color: #f5b917;
 }
 
-.room-details-item .rd-text .rd-title .rdt-right a {
+.room-details-item .rd-text .rd-title .rdt-right button {
 	display: inline-block;
 	color: #ffffff;
 	font-size: 13px;
@@ -1611,6 +1611,7 @@ ol {
 	font-weight: 700;
 	background: #dfa974;
 	padding: 14px 28px 13px;
+	border: none;
 }
 
 .room-details-item .rd-text h2 {
